tests/success/foreach_iter_destruction.bz
import resource;

function test()
{
	(consteval {
		const arr: [1: complex_resource_t] = [ complex_resource_t() ];
		for (const _ in arr) {}
	});
}
