tests/error/comptime/check_slice_construction23.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc([int32, int32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [int32, int32]());

		__builtin_slice_from_ptrs(&(*p)[0], &(*p)[1] + 1);
	});
}
